--- a/lists/templates/lists/base.html
+++ b/lists/templates/lists/base.html
@@ -1,13 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>To-Do lists</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <h1>{% block header_text %}{% endblock %}</h1>
-    <form method="POST" action="{% block form_action %}{% endblock %}"> {% csrf_token %}
-      <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-    </form>
-    {% block table %}
-    {% endblock %}
+    <div class="container">
+      <div class="row">
+	<div class="col-md-6 col-md-offset-3 jumbotron">
+	  <div class="text-center">
+	    <h1>{% block header_text %}{% endblock %}</h1>
+	    <form method="POST" action="{% block form_action %}{% endblock %}"> {% csrf_token %}
+	      <input class="form-control input-lg" name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+	    </form>
+	  </div> <!-- text-center -->
+	</div> <!-- col jumbotron -->
+      </div> <!-- row -->
+      <div class="row">
+	<div class="col-md-6 col-md-offset-3">
+	  {% block table %}
+	  {% endblock %}
+	</div> <!-- table column -->
+      </div> <!-- table row -->
+    </div> <!-- container -->
   </body>
 </html>
