--- a/lists/templates/lists/base.html
+++ b/lists/templates/lists/base.html
@@ -4,6 +4,7 @@
     <title>To-Do lists</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/base.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
@@ -13,7 +14,6 @@
 	    <h1>{% block header_text %}{% endblock %}</h1>
 	    <form method="POST" action="{% block form_action %}{% endblock %}"> {% csrf_token %}
 	      {{ form.text }}
-	      <!-- <input class="form-control input-lg" name="item_text" id="id_new_item" placeholder="Enter a to-do item" /> -->
 	      {% if error %}
 	      <div class="form-group has-error">
 		<span class="help-block">{{ error }}</span>
