--- a/lists/templates/lists/base.html
+++ b/lists/templates/lists/base.html
@@ -4,7 +4,7 @@
     <title>To-Do lists</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/base.css" rel="stylesheet" media="screen">
+    <link href="/static/lists/base.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
@@ -30,5 +30,8 @@
 	</div> <!-- table column -->
       </div> <!-- table row -->
     </div> <!-- container -->
+    
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="/static/lists/list.js"></script>
   </body>
 </html>
