--- a/lists/templates/lists/base.html
+++ b/lists/templates/lists/base.html
@@ -11,7 +11,12 @@
 
       <nav class="navbar navbar-default" role="navigation">
 	<a class="navbar-brand" href="/">Superlists</a>
+	{% if user.email %}
+	<a class="btn navbar-btn navbar-right" id="id_logout" href="#">Logout</a>
+	<span class="navbar-text navbar-right">Logged in as {{ user.email }}</span>
+	{% else %}
 	<a class="btn navbar-btn navbar-right" id="id_login" href="#">Sign in</a>
+	{% endif %}
       </nav>
 
       <div class="row">
@@ -45,7 +50,7 @@
       $(document).ready(function(){
          var user = "{{ user.email }}" || null;
          var token = "{{ csrf_token }}";
-         var urls = {login: "TODO", logout: "TODO",};
+         var urls = {login: "{% url 'persona_login' %}", logout: "TODO",};
          Superlists.Accounts.initialize(navigator, user, token, urls);
       });
     </script>
